--- a/src/scenes/site/Header.css
+++ b/src/scenes/site/Header.css
@@ -11,7 +11,7 @@
   /* HSL color mode */
   --hue-color: 0;
   --first-color: hsl(var(--hue-color), 0%, 35%);
-  --second-color: #706f6f;
+  --second-color: #FFFF;
   /*===== Fuente y tipografia =====*/
   --body-font: 'Red Hat Display', sans-serif;
   --big-font-size: 2rem;
@@ -77,7 +77,7 @@ img {
 .section-title {
   position: relative;
   font-size: var(--h2-font-size);
-  color: var(--first-color);
+  color: #1a252f;
   margin-top: var(--mb-2);
   margin-bottom: var(--mb-4);
   text-align: center;
@@ -92,13 +92,13 @@ img {
   right: 0;
   margin: auto;
   top: 2rem;
-  background-color: var(--first-color);
+  background-color: #1a252f;
 }
 
 .section-title-maior {
   position: relative;
   font-size: var(--h2-font-size);
-  color: var(--first-color);
+  color: #1a252f;
   margin-top: var(--mb-2);
   margin-bottom: var(--mb-4);
   text-align: center;
@@ -113,7 +113,7 @@ img {
   right: 0;
   margin: auto;
   top: 2rem;
-  background-color: var(--first-color);
+  background-color: #1a252f;
 }
 
 .section {
@@ -135,7 +135,7 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: #EDEDED;
+  background-color: #1a252f;
   border-bottom: 1px solid #C8C8C8; 
 }
 
@@ -157,7 +157,7 @@ img {
     width: 80%;
     height: 100%;
     padding: 2rem;
-    background-color: var(--second-color);
+    background-color: var(--first-color);
     transition: .5s;
   }
 }
@@ -182,7 +182,7 @@ img {
   height: 0.12rem;
   left: 0;
   top: 1.6rem;
-  background-color: var(--second-color);
+  background-color: #ffff;
 }
 
 .nav__logo {
@@ -213,7 +213,11 @@ img {
 
 /*===== HOME =====*/
 .home {
-  padding-top: 10px;
+  padding-top: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* Remova background-size: cover; */
 }
 
 .home__data {
@@ -260,13 +264,19 @@ img {
   width: 360px;
 }
 
+.l-main {
+  z-index: 0;
+}
+
 .banner-wrapper {
   position: center;
   width: 100%;
+  overflow: hidden; /* Adicione overflow: hidden; para ocultar o conteúdo que ultrapassar a largura do elemento */
 }
 
 .banner {
-  height: auto;
+  height: 100%;
+  width: 100%;
 }
 
 .button_event {
@@ -276,10 +286,11 @@ img {
   border-bottom: 2px solid #969696; 
   transform: translate(-50%, -50%);
   z-index: 1;
-  background-color: #EDEDED;
-  color: #969696;
-  padding: 1rem 3.7rem;
-  border-radius: 1.6rem;
+  background-color: #1a252f;
+  color: #FFFF;
+  padding: 0.3rem 1.7rem;
+  font-size: x-large;
+  /* border-radius: 1.6rem; */
   font-weight: var(--font-5);
   text-align: center;
   transition: background-color 0.3s, transform 0.3s;
@@ -288,7 +299,7 @@ img {
 .button_event:hover {
   box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
   transform: translate(-50%, -50%) scale(1.05);
-  color: #706f6f;
+  color: #FFFF;
   font: bolder;
 }
 
@@ -327,6 +338,7 @@ img {
 .about__text {
   font-weight: bold;
   font-size: 18.5px;
+  color: #1a252f;
 }
 
 /* ===== SKILLS =====*/
@@ -445,7 +457,7 @@ img {
   font-weight: var(--font-semi);
   padding: 0.4rem;
   color: #fff;
-  background-color: #706f6f;
+  background-color: #1a252f;
   border: 1px solid var(--second-color);
   outline: none;
   margin-bottom: 0.6rem;
@@ -460,7 +472,7 @@ img {
   display: block;
   border: none;
   outline: none;
-  background-color: #706f6f;
+  background-color: #1a252f;
   padding: 0.4rem;
   width: 7.5rem;
   color: #fff;
@@ -471,7 +483,7 @@ img {
 
 /* ===== FOOTER =====*/
 .footer {
-  background-color: var(--second-color);
+  background-color: #1a252f;
   color: #C8C8C8;
   text-align: center;
   font-weight: var(--smaller-font-size);
@@ -634,7 +646,7 @@ img {
     display: none;
   }
   .nav__link {
-    color: var(--second-color);
+    color: #FFFF;
   }
   .home {
     padding-top: 10px;
